# drift-ffi-sys

./: Cargo.toml  README.md
.github/workflows/: build.yml  manual-program-update.yml  on-program-update.yml  release.yml  tmp-dispatch.yml
src/: exports.rs  lib.rs  margin.rs  types.rs
