[package]
name = "drift-ffi-sys"
version = "2.134.1"
edition = "2021"
description = "FFI bindings to drift program"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = { version = "0.11", default-features = false }
anchor-lang = "0.29.0"
drift-program = { package = "drift", git = "https://github.com/drift-labs/protocol-v2.git", tag = "v2.134.0", features = [
    "mainnet-beta", "drift-rs"
] }
solana-sdk = { version = "1.16.*" }
